# AkjoOS

./: Cargo.toml  README.md  build.rs
.run/: Run AkjoOS.run.xml
kernel/: Cargo.toml
kernel/src/: kernel.rs  main.rs
kernel/src/api/: display.rs  event.rs  mod.rs  time.rs
kernel/src/drivers/display/: mod.rs  text.rs
kernel/src/internal/: acpi.rs  aml.rs  cmos.rs  event.rs  framebuffer.rs  gdt.rs  heap.rs  idt.rs  madt.rs  memory.rs  mod.rs  pic.rs  serial.rs
kernel/src/managers/: display.rs  mod.rs  time.rs
kernel/src/systems/: display.rs  time.rs
