[workspace]
members = [ "kernel" ]
resolver = "2"

[package]
name = "test_os"
version = "0.1.0"
edition = "2021"
default-run = "qemu-uefi"

[package.metadata.os]
cpu_count = "2"
vga_xres = "1920"
vga_yres = "1080"
vga_mem = "64"
mem_size = "128M"
accel_enabled = "true"

[dependencies]
ovmf-prebuilt = "0.1.0-alpha"

[build-dependencies]
bootloader = "0.11.7"
serde_json = "1.0.114"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[profile.dev]
panic = "abort"
debug = true
opt-level = 3

[profile.release]
panic = "abort"
debug = true
opt-level = 3